projects/instavote/dev/db-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: db
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      tier: back
      app: db
  template:
    metadata:
      labels:
        app: db
        role: db
        tier: back
        version: "9.4"
    spec:
      containers:
      - image: postgres:9.4
        imagePullPolicy: Always
        name: db
        ports:
        - containerPort: 5432
          protocol: TCP
        resources:
          requests:
            memory: "100Mi"
            cpu: "100m"   # Request for 0.1 CPU cores
          limits:
            memory: "200Mi"
            cpu: "500m"   # Limit for 0.5 CPU cores          
      #   volumeMounts:
      #   - mountPath: /var/lib/postgresql/data
      #     name: db-data
      # volumes:
      # - name: db-data
      #   emptyDir: {}
