projects/instavote/dev/redis-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      tier: back
      role: redis
  minReadySeconds: 10
  template:
    metadata:
      labels:
        app: redis
        role: redis
        tier: back
        version: latest
    spec:
      containers:
      - image: schoolofdevops/redis:latest
        imagePullPolicy: Always
        name: redis
        ports:
        - containerPort: 6379
          protocol: TCP
        resources:
          requests:
            memory: "100Mi"
            cpu: "100m"   # Request for 0.1 CPU cores
          limits:
            memory: "200Mi"
            cpu: "500m"   # Limit for 0.5 CPU cores
