projects/instavote/dev/vote-deploy-rollingupdate.yaml
# Rolling update strategy - Does updates in batches according to the maxSurge variable size
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: vote
  namespace: default
spec: 
  replicas: 15
  strategy:
    type: RollingUpdate
    rollingUpdate: 
      maxSurge: 4 
      maxUnavailable: 1 
  revisionHistoryLimit: 10
  paused: false
  minReadySeconds: 20
  selector: 
    matchLabels: 
      role: vote
    matchExpressions: 
      - {key: version, operator: In, values: [v1, v2, v3]}
  template: 
    metadata:
      name: vote
      labels:
        app: python
        role: vote
        version: v2
    spec:
      containers:
        - name: app
          image: schoolofdevops/vote:v2
          ports:
            - containerPort: 80
              protocol: TCP
          resources:
            requests:
              memory: "100Mi"
              cpu: "100m"   # Request for 0.1 CPU cores
            limits:
              memory: "200Mi"
              cpu: "500m"   # Limit for 0.5 CPU cores
