projects/instavote/dev/results-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: result
  namespace: default
  labels:
    role: result
spec:
  selector:
    role: result
    version: latest
  ports:
  - port: 81
    targetPort: 81
    nodePort: 30001
  type: LoadBalancer
