projects/instavote/dev/vote-svc-bg.yaml
apiVersion: v1
kind: Service
metadata:
  name: vote-bg
  namespace: default
  labels:
    role: vote
    # release: bluegreen
    # code: blue
spec:
  selector:
    role: vote
    release: bluegreen
    code: blue
    version: v3
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30001
  type: NodePort
