projects/instavote/dev/vote-svc-canary.yaml
apiVersion: v1
kind: Service
metadata:
  name: vote-canary
  namespace: default
  labels:
    role: vote-canary
spec:
  selector:
    role: vote-canary
    version: v1
  ports:
  - port: 80
    targetPort: 80
    # nodePort: 30000
  type: LoadBalancer
