projects/instavote/dev/vote-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: vote
  namespace: dev
  labels:
    role: vote
spec:
  selector:
    role: vote
    version: v1
  ports:
  - port: 80
    targetPort: 80
    # nodePort: 30000
  type: LoadBalancer
